# dual_quaternions_ros

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  README.rst  package.xml  requirements.txt  setup.py
dual_quaternions/: CMakeLists.txt  README.rst  dual_quaternions.py  package.xml  setup.py
dual_quaternions/dual_quaternions/: dual_quaternions.py
dual_quaternions/src/dual_quaternions/: dual_quaternions.py
dual_quaternions/src/dual_quaternions/tests/: test_dual_quaternions.py
dual_quaternions/tests/: test_dual_quaternions.py
dual_quaternions_ros/: CMakeLists.txt  README.rst  __init__.py  dual_quaternions.py  package.xml  setup.py
dual_quaternions_ros/dual_quaternions_ros/: __init__.py
dual_quaternions_ros/src/: dual_quaternions_ros.py
dual_quaternions_ros/tests/: test_dual_quaternions.py
src/dual_quaternions_ros/: __init__.py  dual_quaternions_ros.py
tests/: test_dq_ros.py
