<?xml version="1.0"?>
<package format="2">
  <name>dual_quaternions_ros</name>
  <version>0.1.2</version>
  <description>ROS msgs from and to dual quaternions</description>

  <maintainer email="achille.verheye@gmail.com">achille</maintainer>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/dual_quaternions_ros</url> -->
  <author email="achille.verheye@gmail.com">achille</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>dual_quaternions</exec_depend>

</package>
